Microsoft.Network/networkSecurityGroups/ad-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the NSG to update"
      }
    },
    "SubnetPrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the subnet this NSG is attached to"
      }
    }
  },
  "variables": {
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_53')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "properties": {
          "description": "Allow UDP 53",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "53",
          "sourceAddressPrefix": "VirtualNetwork",
          "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
          "access": "Allow",
          "priority": 131,
          "direction": "Inbound"
        }
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_88')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 88",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "88",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 132,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_UDP_123')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow UDP 123",
        "protocol": "Udp",
        "sourcePortRange": "*",
        "destinationPortRange": "123",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 133,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_135')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 135",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "135",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 134,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_137')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 137",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "137",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 135,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_UDP_138')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow UDP 138",
        "protocol": "Udp",
        "sourcePortRange": "*",
        "destinationPortRange": "138",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 136,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_139')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 139",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "139",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 137,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_389')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 389",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "389",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 138,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_445')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 445",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "445",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 139,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_464')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 464",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "464",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 140,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_636')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 636",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "636",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 141,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_3268')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 3268",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "3268",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 142,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_3269')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 3269",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "3269",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 143,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_5722')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 5722",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5722",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 144,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_49152_65535')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 49152_65535",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "49152-65535",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 145,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_9389')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP 9389",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "9389",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 146,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_WinRM_5985')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow WinRM 5985",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5985",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('SubnetPrefix')]",
        "access": "Allow",
        "priority": 147,
        "direction": "Inbound"
      }
    }
  ],
  "outputs": {
  }
}
